--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "rm -R dist && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "css:build": "sass src/styles:public/assets/css"
